# ropesim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_basic_fall_simulation.ipynb  02_anchor_comparison.ipynb  03_rope_database_exploration.ipynb  04_scenario_builder.ipynb  05_rapier_3d_simulation.ipynb
pytest-cache-files-g8do709j/v/cache/: nodeids
pytest-cache-files-kckjzv25/v/cache/: nodeids
ropesim/: __init__.py  anchor.py  cli.py  cli_v2.py  fall.py  notebook.py  replay.py  rope.py  simulate.py  standards.py  units.py  viz.py
ropesim/_rustcore/: Cargo.toml
ropesim/_rustcore/src/: anchor.rs  batch.rs  lib.rs  physics.rs  sim_data.rs  world.rs
ropesim/database/: anchors.json  db.py  ropes.json
ropesim/gui/: __init__.py  __main__.py  canvas.py  main.py  main_window.py  models.py  properties_panel.py  results_panel.py  style.py  viewport3d.py  workers.py
ropesim/gui/dialogs/: __init__.py  gear_editor.py  rope_editor.py
tests/: conftest.py
tests/integration/: test_full_scenario.py  test_rustcore.py  test_rustcore_v2.py
tests/unit/: test_anchor_distribution.py  test_batch.py  test_cli.py  test_cli_v2.py  test_degradation.py  test_fall_factor.py  test_guide_mode.py  test_impact_force.py  test_notebook.py  test_physics_mode.py  test_replay.py  test_rope_compliance.py  test_rope_database.py  test_simulate.py  test_units.py
