[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name        = "ropesim"
version     = "2.0.0"
description = "Climbing rope physics engine and GUI simulator "
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.10"
authors     = [{ name = "Londopy", email = "ropesim@pxdmail.com" }]
keywords    = ["climbing", "physics", "rope", "simulation", "UIAA", "EN892", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6", "vispy>=0.14", "pyopengl>=3.1"]
dev = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "maturin>=1.5",
]
all = [
    "PySide6>=6.6",
    "vispy>=0.14",
    "pyopengl>=3.1",
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "maturin>=1.5",
]

[project.scripts]
ropesim     = "ropesim.gui:main"
ropesim-cli = "ropesim.cli:main"

[project.urls]
Homepage    = "https://github.com/Londopy/ropesim"
Repository  = "https://github.com/Londopy/ropesim"
Issues      = "https://github.com/Londopy/ropesim/issues"
Changelog   = "https://github.com/Londopy/ropesim/blob/main/CHANGELOG.md"

[tool.maturin]
module-name   = "ropesim._rustcore"
manifest-path = "ropesim/_rustcore/Cargo.toml"
python-source = "."
features      = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_rust: skip if ropesim._rustcore has not been compiled",
    "benchmark: performance benchmark",
]

[tool.ruff]
target-version = "py310"
line-length    = 100
select         = ["E", "F", "W", "I", "UP"]
ignore         = ["E501"]

[tool.mypy]
python_version     = "3.11"
ignore_missing_imports = true
