[package]
name    = "ropesim-rustcore"
version = "0.1.0"
edition = "2021"

[lib]
name       = "_rustcore"
crate-type = ["cdylib"]

[dependencies]
pyo3     = { version = "0.23", features = ["extension-module"] }
rayon    = "1.10"
rapier3d = { version = "0.21", features = ["simd-stable"] }
nalgebra = "0.33"

[features]
default = []
